# Homebound

./: .gitignore  README.md
resources/[internal]/: LICENSE
resources/[internal]/em_dal/: LICENSE  fxmanifest.lua
resources/[internal]/em_items/: config.lua  fxmanifest.lua
resources/[internal]/em_jobs/: fxmanifest.lua
resources/[internal]/em_marshal/: fxmanifest.lua
resources/[internal]/em_medical/: fxmanifest.lua
resources/[internal]/voting/: fxmanifest.lua  voting_client.lua  voting_server.lua
resources/internal/em_blips/: fxmanifest.lua
resources/internal/em_commands/: fxmanifest.lua
resources/internal/em_customization/: fxmanifest.lua
resources/internal/em_dal/: fxmanifest.lua
resources/internal/em_fw/: LICENSE  fxmanifest.lua
resources/internal/em_items/: config.lua  fxmanifest.lua
resources/internal/em_jobs/: fxmanifest.lua
resources/internal/em_medical/: fxmanifest.lua
resources/internal/em_no_emergency/: fxmanifest.lua
resources/internal/em_no_hud/: fxmanifest.lua
resources/internal/em_ped/: fxmanifest.lua
resources/internal/em_storage/: fxmanifest.lua
resources/internal/em_stores/: fxmanifest.lua
resources/internal/voting/: voting.sql
sql/: SeedTable.sql  TableCreation.sql
sql/functions/storage/: get_available_space_for_item.sql  (+1 more)
webservices/: Cargo.toml  LICENSE  doc.md
webservices/src/: bank.rs  blips.rs  character.rs  commands.rs  customization.rs  db_postgres.rs  groups.rs  items.rs  main.rs  player.rs  service_hashing.rs  storage.rs  store.rs
webservices/src/items/: metadata.rs  weapon_metadata.rs
(+632 files in other folders)
